@@ -16,6 +16,7 @@ Change log next version
 * Added appendRootPath method to ResponseSpecBuilder
 * Added noRootPath method to ResponseSpecBuilder
 * Added detachRoot method to ResponseSpecification that allows you to detach parts of the root paths (issue 319).
+* Added detachRootPath method to ResponseSpecBuilder.
 
 Change log 2.3.0 (2014-01-23)
 -----------------------------
